Search both lowercases

--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
         function isAlike(name,email,string){
             name = name.toLowerCase()
             email = email.toLowerCase()
+            string = string.toLowerCase()
 
             let regex = new RegExp(string);
             // console.log("name: ",regex.test(name),"email: ",regex.test(email));
